- Fixed bug #53612 (Segmentation fault when using several cloned intl   objects).